--- a/index.html
+++ b/index.html
@@ -387,6 +387,19 @@
       </figure>
     </section>
 
-    <footer class="footer">Footer</footer>
+    <footer class="footer">
+      <ul class="nav">
+        <li class="lav__item"><a href="#" class="nav__link">Find you dream home</a></li>
+        <li class="lav__item"><a href="#" class="nav__link">Request proposal</a></li>
+        <li class="lav__item"><a href="#" class="nav__link">Download home planner</a></li>
+        <li class="lav__item"><a href="#" class="nav__link">Contact us</a></li>
+        <li class="lav__item"><a href="#" class="nav__link">Submit your property</a></li>
+        <li class="lav__item"><a href="#" class="nav__link">Come work with us</a></li>
+      </ul>
+      <p class="copyright">
+        &copy; Copyright 2017 by Jonas Schmedtmann. Feel free to use this project for your own purpose. This does NOT
+        apply if you plan to produce your own course or tutorials based on the project.
+      </p>
+    </footer>
   </body>
 </html>
